# Enterprise-AI-Monitor-BetaPublicRelease

./: README.md
Enterprise-AI-Monitor/: CMakeLists.txt  package-lock.json  simulation-data.json  start_server.bat
Enterprise-AI-Monitor/include/data/: data_collector.hpp
Enterprise-AI-Monitor/include/ml/: model_interface.hpp
Enterprise-AI-Monitor/include/ml/gnn/: network_model.hpp
Enterprise-AI-Monitor/include/ml/lstm/: infrastructure_model.hpp
Enterprise-AI-Monitor/include/ml/rl/: business_model.hpp
Enterprise-AI-Monitor/include/preprocessing/: data_collector.hpp  data_pipeline.hpp  monitoring_types.hpp
Enterprise-AI-Monitor/python_server/: app.py
Enterprise-AI-Monitor/python_server/static/: index.html
Enterprise-AI-Monitor/pytorch models/: Business Process Module.ipynb  Infrastructure Prediction LSTM.ipynb  Network Security Analysis GNN-actual GNN.ipynb  Network Security Analysis GNN.ipynb
Enterprise-AI-Monitor/pytorch models/.ipynb_checkpoints/: Business Process Module-checkpoint.ipynb  Network Security Analysis GNN-actual GNN-v2-checkpoint.ipynb
Enterprise-AI-Monitor/react_dashboard/: CMakeLists.txt  README.md  build_and_run.bat  package.json
Enterprise-AI-Monitor/react_dashboard/public/: app.cs  index.html
Enterprise-AI-Monitor/react_dashboard/src/: app.js
Enterprise-AI-Monitor/react_dashboard/src/utils/: api_bridge.cpp  api_bridge.hpp
Enterprise-AI-Monitor/scripts/: build_api_bridge.sh  run_server.sh
Enterprise-AI-Monitor/src/: CMakeLists.txt  main.cpp
Enterprise-AI-Monitor/src/core/: CMakeLists.txt  core.cpp
Enterprise-AI-Monitor/src/ml/: CMakeLists.txt
Enterprise-AI-Monitor/src/ml/gnn/: CMakeLists.txt  network_model.cpp
Enterprise-AI-Monitor/src/ml/lstm/: CMakeLists.txt  infrastructure_model.cpp
Enterprise-AI-Monitor/src/ml/rl/: CMakeLists.txt  business_model.cpp
Enterprise-AI-Monitor/src/utils/: CMakeLists.txt  utils.cpp
